--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/almarai": "^4.5.0",
+    "@fontsource/josefin-sans": "^4.5.0",
     "autoprefixer": "^10.3.4",
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "^1.14.0",
